# fritters

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  TODO.txt  _.swp  tests.cmake
src/: ciphers.cpp
src/fritters/: RC4.cpp  RC4.h  caesar.cpp  caesar.h  chacha20.cpp  rsa.cpp  rsa.hpp  salsa20.cpp  utils.cpp  utils.h  vigenere.cpp  vigenere.h  xor.cpp  xor.h
src/fritters/c/: RC4.c  chacha20.c  salsa20.c
testb/: CMakeCache.txt
tests/: test.db.MH.sqlite  test.db.sqlite  test.txt  test_RC4.cpp  test_io_files.cpp  test_io_strings.cpp  test_rsa.cpp  test_salsa.cpp
